add about me info

--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+<div class="container space">
+    <!-- main -->
+    <main class="row">
+        <!--Photo & contact content-->
+        <section class="col-sm-2">
+            <img src="./img/profile_pic.jpg" class="img-fluid rounded" alt="Cinque Terre">
+            <p>
+                <p class="profileName"><strong>Emmanuel Lucio Urbina</strong></p>
+                <ul class="lists-info">
+                    <li>México</li>
+                    <li>@emmanuelluur</li>
+                </ul>
+            </p>
+
+            <ul class="lists-btns">
+                <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Interests</a></li>
+                <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Projects</a></li>
+                <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Voluntary</a></li>
+            </ul>
+
+        </section>
+        <section class="col-sm-10">
+            <h3>About Me</h3>
+            <p>
+                Hi, I'm Emmanuel. Am glad to introduce me, I'am from México.
+                First I work by my self like web developer with PHP & Js
+                (using NodeJS & express framework).
+                I enrolled in CS50WEB becouse I'am interesting learn Python for web and improve my knowledge about web
+                development.
+            </p>
+        </section>
+    </main>
+</div>
 
 <body>
     <!--Bootstrap JS-->
