--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,6 +34,7 @@
         </section>
         <section class="col-sm-4">
             <form action="./response.html" method="post">
+                <h4>Contact Form</h4>
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input type="email" name="mail" id="email" class="form-control" placeholder="example@mail.com" required>
