--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<div class="container space">
+<main class="container space">
     <!-- main -->
-    <main class="row">
+    <section class="row">
         <!--Photo & contact content-->
-        <section class="col-sm-2">
+        <article class="col-sm-2">
             <img src="./img/profile_pic.jpg" class="img-fluid rounded" alt="Cinque Terre">
             <p>
                 <p class="profileName"><strong>Emmanuel Lucio Urbina</strong></p>
@@ -31,8 +31,8 @@
                 <li><a href="./pages/contact.html" class="btn btn-outline-secondary btn-sm btn-block">Contact</a></li>
             </ul>
 
-        </section>
-        <section class="col-sm-10">
+        </article>
+        <article class="col-sm-10">
             <h3>About Me</h3>
             <p>
                 Hi, I'm Emmanuel. Am glad to introduce me, I'am from México.
@@ -41,9 +41,9 @@
                 I enrolled in CS50WEB becouse I'am interesting learn Python for web and improve my knowledge about web
                 development.
             </p>
-        </section>
-    </main>
-</div>
+        </article>
+    </section>
+</main>
 
 <body>
     <!--Bootstrap JS-->
