--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,11 +11,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
-<div class="container space">
+<main class="container space">
     <!-- main -->
-    <main class="row">
+    <section class="row">
         <!--Photo & contact content-->
-        <section class="col-sm-2">
+        <article class="col-sm-2">
             <img src="../img/profile_pic.jpg" class="img-fluid rounded" alt="Cinque Terre">
             <p>
                 <p class="profileName"><strong>Emmanuel Lucio Urbina</strong></p>
@@ -31,8 +31,8 @@
                 <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Contact</a></li>
             </ul>
 
-        </section>
-        <section class="col-sm-4">
+        </article>
+        <article class="col-sm-4">
             <form action="./response.html" method="post">
                 <h4>Contact Form</h4>
                 <div class="form-group">
@@ -47,9 +47,9 @@
                 </div>
                 <button class="btn btn-success" name="btnSend" id="btnSend" type="submit">Send</button>
             </form>
-        </section>
-    </main>
-</div>
+        </article>
+    </section>
+</main>
 
 <body>
     <!--Bootstrap JS-->
