--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <ul class="lists-btns">
                 <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">About Me</a></li>
-                <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Interests</a></li>
+                <li><a href="#" class="btn btn-outline-secondary btn-sm btn-block">Projects</a></li>
                 <li><a href="./pages/contact.html" class="btn btn-outline-secondary btn-sm btn-block">Contact</a></li>
             </ul>
 
