--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,7 +34,36 @@
         </article>
         <article class="col-sm-10">
             <!--Projects list-->
-            <h4>Projects</h4>
+            <h4>Projects as volunteer</h4>
+            <p>Projects created to teach childrens how programming</p>
+            <hr>
+            <div class="card" style="width: 18rem;">
+                <!--Video YT-->
+                <iframe width="100%" height="250px" src="https://www.youtube.com/embed/3HexYfJkiMM" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="card-body">
+                    <strong>Juego Maze</strong>
+                    <p class="card-text">Tutorial to make maze game with scratch.</p>
+                    <table class="table table-sm">
+                        <thead>
+                            <th  class="bg-dark text-white">Info</th>
+                            <th  class="bg-dark text-white">Description</th>
+
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td  class="bg-dark text-white">Difficulty</td>
+                                <td>Normal</td>
+                            </tr>
+                            <tr>
+                                <td  class="bg-dark text-white">Time Estimated</td>
+                                <td>40 min.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </article>
     </section>
 </main>
